# stt

./: .gitignore  Cargo.toml  Makefile.toml
server/: Cargo.toml
server/src/: main.rs
web/: Cargo.toml  index.html  index.scss
web/assets/: downsampling_worker.js
web/src/: app.rs  main.rs  mic.rs  stop.rs
