[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = ["full"] }
axum = { version = "0.6.1", features = ["headers", "macros"] }
headers = "0.3"
tower-http = { version = "0.3", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "0.2.8"
bytes = "1.3.0"
coqui-stt = "1.0.2"
serde = { version = "1.0", features = ["serde_derive"]}
serde_json = "1.0.89"
lazy_static = "1.4.0"
axum-extra = { version = "0.4.2", features = ["spa"] }