[package]
name = "web"
version = "0.1.0"
edition = "2021"
description = "An STT term paper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20.0", features = ["csr"]}
wasm-bindgen = "0.2.83"
js-sys = { version = "0.3.60", features = [] }
wasm-bindgen-futures = "0.4"
gloo-net = "0.2.5"
gloo-console = "0.2.3"
serde_json = "1.0.89"
serde = { version = "1.0.149", features = ["serde_derive"]}

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Navigator",
    "AudioContext",
    "AudioBuffer",
    "AudioProcessingEvent",
    "AudioDestinationNode",
    "MediaDevices",
    "ScriptProcessorNode",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "MediaStreamConstraints",
    "Worker",
]